style.css
@media screen and (max-width: 420px) {
  .container-outer {
    display: flex !important;
    flex-direction: row !important;
    flex-wrap: wrap !important;
  }

  .container-left {
    margin-top: -3rem !important;
  }

  .input label {
    font-size: 4.8rem !important;
    margin-top: 0rem !important;
    margin-bottom: 0.5rem !important;
    padding: 0.2rem !important;
    line-height: 3.8rem !important;
  }

  .input {
    margin-right: 0rem !important;
  }

  .breaths {
    font-size: 0.8rem !important;
  }

  .instructions {
    font-size: 0.9rem !important;
  }

  .button-inactive {
    pointer-events: none;
    background-color: #ffe5ee !important;
    color: #f9c0d2 !important;
  }

  .circle-outline {
    width: 12rem !important;
    height: 12rem !important;
    border-radius: 50%;
    background-color: transparent;
    border: 0.5rem solid #f1f1f1;
    box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
    z-index: 0;
  }

  .circle-progress {
    width: 1rem;
    height: 1rem;
    position: absolute;
    background-color: #cd001a;
    border-radius: 50%;
    transition: 4s ease all;
    z-index: 2;
  }

  .circle-grow {
    transform: scale(9) !important;
    -webkit-transform: scale(9) !important;
    -moz-transform: scale(9) !important;
    -ms-transform: scale(9) !important;
    -o-transform: scale(9) !important;
  }
  #object-position-9 {
    top: 80% !important;
    left: -30% !important;
  }

  #object-position-13 {
    display: none;
  }
}

@font-face {
  font-family: "Grotesk";
  src: url(./assets/sharp-grotesk-medium.otf);
}

@font-face {
  font-family: "Sohne Narrow";
  src: url(./assets/sohne-schmal.otf);
}

@font-face {
  font-family: "Sohne Wide";
  src: url(./assets/sohne-wide.otf);
}

@font-face {
  font-family: "Sohne Wide Bold";
  src: url(./assets/sohne-wide-bold.otf);
}

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  font-family: "Sohne Wide", sans-serif;
}

.container-outer {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  text-align: center;
  margin-top: 3.5rem;
}

body {
  margin: 0;
  display: flex;
  flex-direction: column;
  color: #fff;
  background-color: #f39237;
}

span {
  margin-top: 1.25rem;
}

.highlighted {
  color: #fa0e58;
}

.input {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: 3rem;
  margin-bottom: 1.25rem;
  margin-right: 2rem;
  text-align: left;
  text-transform: uppercase;
  /* line-height: 7rem; */
  line-height: 6.5rem;
}

.input label {
  font-family: "Sohne Narrow", sans-serif;
  /* font-size: 7.5rem; */
  font-size: 8rem;
  font-weight: 500;
  /* margin-bottom: 2.4rem; */
  margin-bottom: 3rem;
  letter-spacing: 0.019rem;
}

.instructions {
  color: #ffffff;
  font-size: 1.1rem;
  margin-top: 0.5rem;
  margin-bottom: 1.4rem;
}

select {
  width: 12.8rem;
  text-align-last: center;
  -o-appearance: none;
  -ms-appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.input select {
  cursor: pointer;
  font-family: "Sohne Wide Bold", sans-serif;
  border: none;
  border-radius: 2.5rem;
  font-size: 1rem;
  padding: 1.5rem 0.6rem;
  background-color: #ffd60a;
  color: #ffffff;
  max-width: 8.75rem;
  transition: 0.01s ease all;
  -webkit-border-radius: 2.5rem;
  -moz-border-radius: 2.5rem;
  -ms-border-radius: 2.5rem;
  -o-border-radius: 2.5rem;
  -webkit-transition: 0.01s ease all;
  -moz-transition: 0.01s ease all;
  -ms-transition: 0.01s ease all;
  -o-transition: 0.01s ease all;
}

.input select:focus {
  outline: none;
}

.input select:hover {
  background-color: #ffffff;
  color: #ffd60a;
  max-width: 10.5rem;
  max-height: 4rem;
  box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
  -webkit-transition: max-width 1s, max-height 2s, box-shadow 2s;
}

.circle-grow {
  transform: scale(16);
  -webkit-transform: scale(16);
  -moz-transform: scale(16);
  -ms-transform: scale(16);
  -o-transform: scale(16);
}

.circle-outline {
  margin-top: -1.5rem;
  width: 26rem;
  height: 26rem;
  border-radius: 50%;
  background-color: transparent;
  border: 0.8rem solid #f1f1f1;
  box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
  z-index: 0;
}

.circle-progress {
  margin-top: -1.5rem;
  width: 1rem;
  height: 1rem;
  position: absolute;
  background-color: #cd001a;
  border-radius: 50%;
  transition: 4s ease all;
  z-index: 2;
}

.circle-wrap {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  position: relative;
  margin-top: 1.5rem;
  margin-bottom: 1.5rem;
  z-index: 0;
}

.breaths {
  display: none;
  font-size: 0.85rem;
  margin-top: 1rem;
  margin-bottom: 1rem;
  letter-spacing: 0.03rem;
}

.breath-input {
  box-shadow: 0 3px 10px rgba(55, 54, 54, 0.2);
}

.no-of-breaths-left {
  font-size: 0.85rem;
}

.start {
  font-size: 1rem;
}

button {
  font-family: "Sohne Wide Bold", sans-serif;
  padding: 1.5rem 1.5rem;
  border-radius: 2.5rem;
  background-color: #ffffff;
  color: #00874f;
  border: none;
  cursor: pointer;
  box-shadow: 0 3px 10px rgba(55, 54, 54, 0.2);
  transition: 0.3s ease all;
  -webkit-border-radius: 2.5rem;
  -moz-border-radius: 2.5rem;
  -ms-border-radius: 2.5rem;
  -o-border-radius: 2.5rem;
  -webkit-transition: 0.3s ease all;
  -moz-transition: 0.3s ease all;
  -ms-transition: 0.3s ease all;
  -o-transition: 0.3s ease all;
}

button:hover {
  background-color: #00874f;
  color: #ffffff;
  box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
  transform: translate(0, -10%);
  transition: 1s ease all;
  -webkit-transform: translate(0, -10%);
  -moz-transform: translate(0, -10%);
  -ms-transform: translate(0, -10%);
  -o-transform: translate(0, -10%);
  -webkit-transition: 1s ease all;
  -moz-transition: 1s ease all;
  -ms-transition: 1s ease all;
  -o-transition: 1s ease all;
}

.button-inactive {
  pointer-events: none;
  background-color: #ffe5ee !important;
  color: #f9c0d2 !important;
}

.instructions {
  margin-top: 1.8rem;
}

.fade-in {
  animation: fadeIn ease 5s;
  -webkit-animation: ;
  -moz-animation: fadeIn ease 5s;
  -o-animation: fadeIn ease 5s;
  -ms-animation: fadeIn ease 5s;
}

@keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@-moz-keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@-webkit-keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@-o-keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@-ms-keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

